glx/testdata/invalid/broken-references/repositories/repository-national-archives.glx
repositories:
  repository-tna:
    name: "The National Archives"
    type: archive
    address: "Kew, Richmond, Surrey, TW9 4DU, United Kingdom"
    website: "https://www.nationalarchives.gov.uk"
    properties:
      emails:
        - "research@nationalarchives.gov.uk"
      phones:
        - "+44 20 8876 3444"
    notes: "National archives of England and Wales"
